tests/unit-fail-compilation/j027b.ref
j027b.c:2:2: error: missing terminating '"' character [-Werror,-Winvalid-pp-token]
        "x
        ^
j027b.c:3:2: error: missing terminating '"' character [-Werror,-Winvalid-pp-token]
        ";
        ^
2 errors generated.
Translation failed. Run kcc -d j027b.c -o j027b.out to see commands run.
